alignment issue fixed in footer

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -323,8 +323,8 @@
         border: solid 1px #30855c;
         border-top-left-radius: 6px;
         border-bottom-left-radius: 6px;
-        width: 188px !important;
-        height: 40px !important;
+        width: 247px !important;
+        height: 45px !important;
         @media (max-width: 767px) {
             width: 130px !important;
         }
@@ -340,15 +340,15 @@
     border: none;
 }
 .custom-submit-foot {
-    width: 70px !important;
-    height: 40px !important;
+    width: 85px !important;
+    height: 45px !important;
     @media (max-width: 767px) {
         width: 50px !important;
     }
 }
 
 .custom-pad {
-    padding-left: 9rem;
+    padding-left: 5rem;
 }
 
 :host ::ng-deep .toast .p-toast .p-toast-message-content,
